--- a/yaapp/media/yaweb/css/base.css
+++ b/yaapp/media/yaweb/css/base.css
@@ -427,3 +427,11 @@ h4 {
 	width: 527px;
 	height : 60px;
 }
+
+.lang-form input {
+	cursor: pointer;
+    background: none;
+    border: none;
+    color: #999999;
+    cursor: pointer;
+}
