--- a/yaapp/apps/yaweb/templates/yaweb/about.html
+++ b/yaapp/apps/yaweb/templates/yaweb/about.html
@@ -1,4 +1,7 @@
-{% extends "yaweb/base.html" %} {% load i18n %} {% block content %}
+{% extends "yaweb/base.html" %} {% load i18n %} 
+
+{% block title %}{% trans "About" %}{% endblock %}
+{% block content %}
 <div id="middle">
 	<div class="corpo" id="content">
 		<img src="/media/yaweb/images/backContentCorpo.jpg" width="1000"
@@ -7,42 +10,33 @@
 			<img src="/media/yaweb/images/Jean-Marc_Plueger.jpg" width="217"
 				height="297" alt="Jean-Marc_Plueger" />
 			<h3>Jean-Marc_Plueger</h3>
-			Cofondateur, Président<br />
-			<br />Jean-Marc a fondé la webagency CSTech et le site de musique à
-			la demande Jiwa.<br />A part créer des startups, il aime bien aussi
-			voyager...
+			{% blocktrans %}CEO, Co-Founder <br/> <br/> Jean-Marc founded
+			the web agency CSTech and Jiwa, a music-on-demand website. <br/>
+			When he's not founding startups, Jean-Marc loves to travel.
+			{% endblocktrans %}
 		</div>
 		<div class="data" style="margin-right: 105px; width: 217px;" id="Seb">
 			<img src="/media/yaweb/images/Sebastien_Metrot.jpg" width="217"
 				height="297" alt="Sébastien Métrot" />
 			<h3>Sébastien Métrot</h3>
-			Cofondateur, Directeur Technique<br />
-			<br />Après avoir développé de nombreux logiciels de musique et
-			assuré la R&D audio d'éditeurs de jeux vidéos, il rejoint la startup
-			MXP4 où il devient Senior Director of Technology.<br />Quand il ne
-			code pas en C++, il pratique les langues orientales et la musique.
+			{% blocktrans %}CTO, Co-Founder<br /><br />
+  After developing music software and providing audio R&amp;D for video game publishers, Sébastien joined MXP4 where he became Senior Director of Technology. <br />
+  When he's not coding in C++, Sébastien plays music and studies Asian languages.  
+			{% endblocktrans %}
 		</div>
 		<div class="data" style="width: 360px; vertical-align: middle;"
 			id="descriptif">
-			<p>
-				MP3, webradios, Youtube ou sites de streaming, les moyens pour
-				écouter de la musique sur le net se sont multipliés. Pourtant ce
-				n'est pas vraiment possible de partager son écoute en temps réel.
-				Yasound appartient à une nouvelle génération de sites de musique :
-				la génération de l'écoute sociale, qui offre à ses utilisateurs la
-				possibilité de communiquer et d'échanger autour d'une même écoute.<br />
-				<br />
-				<br />Yasound a été fondé en 2011 par Jean-Marc Plueger et
-				Sébastien Métrot.
-			</p>
+			{% blocktrans %}
+			<p>MP3, Internet radio, YouTube, and music streaming sites have all expanded our options for listening to music. But it has never really been possible to share music in real time. Yasound is part of a new generation of social listening sites that give users the tools to share and communicate like never before. </p>
+    <p>Yasound was founded in 2011 by Jean-Marc Plueger and Sébastien Métrot. </p>
+            {% endblocktrans %}
 		</div>
 		<div class="data" style="height: 40px; width: 960px;"></div>
 		<div id="rouge">
-			<h2>Yasound est un nouveau service qui vous permet de créer
-				votre radio musicale en un instant et d'échanger en temps réel avec
-				vos amis.</h2>
+			<h2>{% trans "Yasound is a new service that lets you create your own radio station in just a few clicks and share it with your friends in real time." %}</h2>
 		</div>
 		{% include "yaweb/social_share.html" %}
 	</div>
 </div>
+<div id="deco">&nbsp;</div>
 {% endblock %}
