--- a/yaapp/apps/yaweb/templates/yaweb/base.html
+++ b/yaapp/apps/yaweb/templates/yaweb/base.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>YASOUND : A propos de nous</title>
+<title>{% block title %}{% endblock %} - Yasound</title>
 <meta property="og:title" content="YASOUND : N'écoutez plus seul votre musique."/>
 <meta property="og:type" content="Compagnie"/>
 <meta property="og:url" content="http://yasound.com/fr"/>
@@ -90,7 +90,6 @@ window.addEvent('domready', function() {
 
 {% block content %}{% endblock %}
 
-<div id="deco">&nbsp;</div>
 <div id="footer">
   <div id="content">
     <div id="menu">
