--- a/yaapp/media/yaweb/css/base.css
+++ b/yaapp/media/yaweb/css/base.css
@@ -428,6 +428,11 @@ h4 {
 	height : 60px;
 }
 
+.lang-form input{
+	padding:0;
+	margin:0;
+	display: inline;
+}
 .lang-form input {
 	cursor: pointer;
     background: none;
