--- a/yaapp/apps/yaweb/templates/yaweb/base.html
+++ b/yaapp/apps/yaweb/templates/yaweb/base.html
@@ -4,14 +4,14 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>{% block title %}{% endblock %} - Yasound</title>
-<meta property="og:title" content="YASOUND : N'écoutez plus seul votre musique."/>
-<meta property="og:type" content="Compagnie"/>
-<meta property="og:url" content="http://yasound.com/fr"/>
-<meta property="og:image" content="http://yasound.com/fr/og.jpg"/>
-<meta property="og:site_name" content="YASOUND : N'écoutez plus seul votre musique."/>
+<meta property="og:title" content="{% trans 'YASOUND : There’s no need to listen to music alone anymore' %}"/>
+<meta property="og:type" content="{% trans 'Company' %}"/>
+<meta property="og:url" content="https://yasound.com/"/>
+<meta property="og:image" content="https://yasound.com/media/yaweb/images/og.jpg"/>
+<meta property="og:site_name" content="{% trans 'YASOUND : There’s no need to listen to music alone anymore' %}"/>
 <meta property="fb:admins" content="USER_ID"/>
 <meta property="og:description"
-      content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net, et bientôt sur votre mobile."/>
+      content="{% trans 'With Yasound, there’s no need to listen to music alone anymore. Create your own radio station instantly and share with your friends in real time online and on your phone.' %}"/>
 
 <link rel="icon" type="image/png" href="/media/yaweb/images/favicon.png" />
 <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
