--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{{current_locale}}" lang="{{current_locale}}">
 <head>
     <title>{% block head_title %}Home{% endblock %} — Yasound</title>
-    <link rel="icon" type="image/x-icon" href="/media/images/favicon.ico" />
+    <link rel="icon" type="image/png" href="/media/yaweb/images/favicon.png" />
 	<meta name="description" content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net, et bientôt sur votre mobile." />
 	<meta name="Author" content="Yasound SAS" />
 	<meta name="copyright" content="Yasound SAS" />
