--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -19,8 +19,8 @@
 	<meta property="og:description"
 	      content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net, et bientôt sur votre mobile."/>
 
-    <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/media/css/style.css">
+    <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/media/css/style.css"/>
 
     {% block extra_head %}{% endblock %}
 </head>
