Added friends count

--- a/yaapp/templates/yabackoffice/keyfigures.html
+++ b/yaapp/templates/yabackoffice/keyfigures.html
@@ -61,6 +61,14 @@
             {{favorite_count}} 
             </td>
         </tr>
+        <tr>
+            <td>
+                {% trans "Friend count" %}
+            </td>
+            <td>
+            {{yasound_friend_count}} 
+            </td>
+        </tr>
     </tbody>
 </table>
 </div>
