Added uploaded songs metric

--- a/yaapp/templates/yabackoffice/keyfigures.html
+++ b/yaapp/templates/yabackoffice/keyfigures.html
@@ -39,6 +39,14 @@
         </tr>
         <tr>
             <td>
+                {% trans "Uploaded songs" %}
+            </td>
+            <td>
+            {{uploaded_song_count}} 
+            </td>
+        </tr>
+        <tr>
+            <td>
                 {% trans "Message count" %}
             </td>
             <td>
@@ -67,6 +75,14 @@
             </td>
             <td>
             {{yasound_friend_count}} 
+            </td>
+        </tr>
+        <tr>
+            <td>
+                {% trans "Listening time" %}
+            </td>
+            <td>
+            {{listening_time}} 
             </td>
         </tr>
     </tbody>
