Added total friend count

--- a/yaapp/templates/yabackoffice/keyfigures.html
+++ b/yaapp/templates/yabackoffice/keyfigures.html
@@ -71,10 +71,18 @@
         </tr>
         <tr>
             <td>
-                {% trans "Friend count" %}
+                {% trans "Yasound friend count" %}
             </td>
             <td>
             {{yasound_friend_count}} 
+            </td>
+        </tr>
+        <tr>
+            <td>
+                {% trans "Total Friend count" %}
+            </td>
+            <td>
+            {{total_friend_count}} 
             </td>
         </tr>
         <tr>
