--- a/yaapp/templates/account/login.html
+++ b/yaapp/templates/account/login.html
@@ -6,25 +6,62 @@
 
 {% block content %}
     <div class='row'>
-        <div class='span4'>
-           <div id="radio">
-               <div id='radio-picture' class='thumbnail'>
-                   <img src="/media/images/default_image.png" width="160px" height="160px" alt='{% trans "Radio logo" %}'/>
-               </div>
-               <div id='radio-title'>
-                </div>
-           </div>
-        </div>   
-
-        <div class='span8'>
-           <div id='player'>
-               <h1>{% trans "Login required" %}</h1>
-               <p>{% trans "You must be logged to access this ressource." %}</p>
-               
-               <p>
-               <a rel="nofollow" href="{% url socialauth_begin 'facebook' %}?next={{ next }}">{% trans "Please click here to login" %}</a>
-               </p>
+        <div class='span12'>
+            <div class='page-header'>
+               <h1>{% trans "Login" %}
+                <small>{% trans "Please choose your prefered login method below" %}</small>
+               </h1>
             </div>
+        </div>
+    </div>
+    <div class='row'>
+        <div class='span4'>
+                <form class="well">
+                <fieldset>
+                <legend>{% trans "Social login services" %}</legend>
+            
+            {% if next %}   
+            <a href="{% url socialauth_begin 'facebook' %}?next={{ next }}" rel="nofollow">
+            <img class="login-service" alt="Facebook" src="/media/images/logo-facebook.png">
+            </a>
+			<a href="{% url socialauth_begin 'twitter' %}?next={{ next }}" rel="nofollow">
+			<img class="login-service" alt="Twitter" src="/media/images/logo-twitter.png">
+			</a>
+			{% else %}
+            <a href="{% url socialauth_begin 'facebook' %}" rel="nofollow">
+            <img class="login-service" alt="Facebook" src="/media/images/logo-facebook.png">
+            </a>
+            <a href="{% url socialauth_begin 'twitter' %}" rel="nofollow">
+            <img class="login-service" alt="Twitter" src="/media/images/logo-twitter.png">
+            </a>
+			{% endif %}
+			</fieldset>
+			</form>
+        </div>   
+        <div class='span4'>
+			    <form class="well">
+			    <fieldset>
+			    <legend>{% trans "Login using existing account" %}</legend>
+			    <input type="text" class="span3" placeholder="{% trans 'Email' %}"/>
+                <input type="text" class="span3" placeholder="{% trans 'Password' %}"/>
+                <br/>
+			    <button type="submit" class="btn btn-primary">{% trans "Login" %}</button>
+			    <a href='/'>{% trans "Lost password ?" %}</a>
+                </fieldset>
+			    </form>
+            </div>
+        <div class='span4'>
+                <form class="well">
+                <fieldset>
+                <legend>{% trans "Create a new account" %}</legend>
+                <input type="text" class="span3" placeholder="{% trans 'Username' %}"/>
+                <input type="text" class="span3" placeholder="{% trans 'Email' %}"/>
+                <input type="text" class="span3" placeholder="{% trans 'Password' %}"/>
+                <input type="text" class="span3" placeholder="{% trans 'Password (again)' %}"/>
+                <br/>
+                <button type="submit" class="btn btn-primary">{% trans "Register" %}</button>
+                </fieldset>
+                </form>
         </div>
     </div>    
     
