--- a/yaapp/templates/account/password_reset_confirm.html
+++ b/yaapp/templates/account/password_reset_confirm.html
@@ -1,31 +1,25 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% load uni_form_tags %}
-{% load page_tags %}
 
-{% block help %}
-{% header_for 'password-confirm' as header %}
-<h1>{{ header.title}}</h1>
-{{ header.body|safe }}
-{% endblock %}
-
-{% block breadcrumb %}
-<p id="breadcrumb"><a href="/">{% trans "Home" %}</a><span class="breadcrumb-separator">></span><a class="you-are-here" href="#">{% trans "Password confirm" %}</a></p>
-{% endblock %}
+{% block head_title %}{% trans "Password reset" %}{% endblock %}
 
 {% block content %}
-<div class="row"><div class="pre_3 col_9 omega"><div class='page-content'>
-    <h2>{% trans "Reset password" %}</h1>
-        {% if validlink %}
-        <form id="lost-password" class="uniForm" method="post">
-        {{ form|as_uni_form }}
-        <div class="buttonHolder">
-            <input id="submit-id-submit" class="button big-rounded black" type="submit" value="{% trans 'Submit' %}" name="submit">
-        </div>
-        </form>
+    <div class='row'>
+        <div class='span12'>
+            <div class='page-header'>
+               <h1>{% trans "Reset password confirmation" %}
+               </h1>
+            </div>
+          {% if validlink %}
+          <form class="well" method='post'>{% csrf_token %}
+          <fieldset>
+          {{form}}
+            <input id="submit-id-submit" class="btn btn-primary" type="submit" value="{% trans 'Reset' %}" name="submit">
+          </fieldset>
+          </form>
         {% else %}
         <p>{% trans "The password reset link was invalid" %}</p>
         {% endif %}
-
-</div></div></div>
+        </div>
+    </div>
 {% endblock %}
