--- a/yaapp/templates/account/login.html
+++ b/yaapp/templates/account/login.html
@@ -50,10 +50,10 @@
 			    </form>
             </div>
         <div class='span4'>
-                <form class="well" method='post'>{% csrf_token %}
+                <form class="well" method='post' id='signup-form'>{% csrf_token %}
                 <fieldset>
                 <legend>{% trans "Create a new account" %}</legend>
-                {{ signup_form }} 
+                {{ signup_form}} 
                 <input type='hidden' name='action' value='signup'/>
                 <button type="submit" class="btn btn-primary">{% trans "Register" %}</button>
                 </fieldset>
