Added a link on mobile website to go back to regular website

--- a/yaapp/apps/yaweb/templates/yaweb/index_mobile.html
+++ b/yaapp/apps/yaweb/templates/yaweb/index_mobile.html
@@ -25,7 +25,6 @@
 
 <div id="video">
 
-
 <param name="movie" value="http://www.youtube.com/v/ysEpLi4ZWhs?version=3&amp;hl=fr_FR&amp;rel=0&amp;autohide=1&amp;color2=f2f2f0&amp;showinfo=0">
 </param>
 <param name="allowFullScreen" value="true">
@@ -37,6 +36,11 @@
 </div>
 
     <a href="http://itunes.apple.com/us/app/yasound/id492680161?ls=1&mt=8"><img class="button" src="/media/yaweb/mobile/images/{{request.LANGUAGE_CODE}}/now_appStore.png"/></a>
+
+
+<div id='regular-link'>
+<a href="/?flavour=full">{% trans "Go to full website" %}</a>
+</div>
 
 </div>
     
