--- a/yaapp/templates/account/login.html
+++ b/yaapp/templates/account/login.html
@@ -18,16 +18,14 @@
 </div>
 <div class='container-fluid login-back'>
     <div class='row-fluid'>
-        {% if request.user.is_authenticated %}
-        <div class='span12'>
-        <p>{% trans "You are already authenticated" %}</p>
-        </div>
-        {% else %}
-
         <div class='span12'>
         
             <div class='well-center'>
                 <h2>{% trans "Welcome to Yasound" %}</h2>
+                {% if request.user.is_authenticated %}
+                <p>{% trans "You are already authenticated" %}.
+                <a href='{% url logout%}'>{% trans "Logout" %}</a></p>
+                {% endif %}
                 <form method='post'>{% csrf_token %}
                 <fieldset>
                 <input id="id_login-email" type="text" maxlength="75" name="login-email" placeholder="{% trans 'Email' %}">
@@ -58,7 +56,6 @@
             {% endif %}
                 
             </div>
-        {% endif %}
     </div>    
 
     <div class='row-fluid'>
@@ -68,6 +65,7 @@
         </a>
         </div>
     </div>    
+   </div>
 </div>
 
 <div class='container-fluid'>
@@ -76,9 +74,8 @@
       {% if request.user.is_authenticated %}<a href="{% url logout %}">{% trans "Logout" %}</a> | {% endif %} <a href="http://yasound.com/fr/a_propos_de_nous.php">À propos de nous</a> | <a href="http://yasound.com/fr/jobs.php">Jobs</a> | <a href="http://yasound.com/fr/presse.php">Presse</a> | <a href="http://yasound.com/fr/contact.php">Contact</a>
       </div>
     </footer>
-    </div>
 </div>
-</div>
+
 </body>
 {% endblock %}
 
