--- a/yaapp/templates/account/signup.html
+++ b/yaapp/templates/account/signup.html
@@ -18,16 +18,14 @@
 </div>
 <div class='container-fluid login-back2'>
     <div class='row-fluid'>
-        {% if request.user.is_authenticated %}
-        <div class='span12'>
-        <p>{% trans "You are already authenticated" %}</p>
-        </div>
-        {% else %}
-
         <div class='span12'>
         
             <div class='well-center'>
                 <h2>{% trans "Signup" %}</h2>
+                {% if request.user.is_authenticated %}
+                <p>{% trans "You are already authenticated" %}.
+                <a href='{% url logout%}'>{% trans "Logout" %}</a></p>
+                {% endif %}
                 <form id='signup-form' method='post'>{% csrf_token %}
                 <fieldset>
                 
@@ -39,7 +37,6 @@
                 </fieldset>
                 </form>
             </div>
-        {% endif %}
     </div>    
 
     <div class='row-fluid'>
@@ -49,7 +46,9 @@
         </a>
         </div>
     </div>    
+  </div>
 </div>
+
 <div class='container-fluid'>
     <footer>
       <div id="menu">
@@ -57,7 +56,7 @@
       </div>
     </footer>
 </div>
-</div>
+
 </body>
 {% endblock %}
 
