--- a/yaapp/templates/account/password_reset_form.html
+++ b/yaapp/templates/account/password_reset_form.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 </div>
-<div class='container-fluid login-back'>
+<div class='container-fluid login-back3'>
     <div class='row-fluid'>
         <div class='span12'>
         
