Fixed validation problem

--- a/yaapp/media/css/style.css
+++ b/yaapp/media/css/style.css
@@ -150,7 +150,8 @@ footer #menu a:hover {
 	display: block;
 }
 
-#signup-form label
+#login-form label
+,#signup-form label
 ,#passreset-form label
  {
 	display: none;
