--- a/yaapp/templates/account/password_reset_form.html
+++ b/yaapp/templates/account/password_reset_form.html
@@ -18,6 +18,13 @@
         
             <div class='well-center'>
                 <h2>{% trans "Reset" %}</h2>
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}                
                 {% if request.user.is_authenticated %}
                 <p>{% trans "You are already authenticated" %}.
                 <a href='{% url logout%}'>{% trans "Logout" %}</a></p>
@@ -30,6 +37,10 @@
             </div>
     </div>    
 
+  </div>
+</div>
+
+<div class='container-fluid'>
     <div class='row-fluid'>
         <div id='appstore'>
         <a href="http://itunes.apple.com/fr/app/yasound/id492680161?mt=8&uo=4" target="itunes_store">
@@ -37,10 +48,6 @@
         </a>
         </div>
     </div>    
-  </div>
-</div>
-
-<div class='container-fluid'>
     <footer>
       <div id="menu">
       {% if request.user.is_authenticated %}<a href="{% url logout %}">{% trans "Logout" %}</a> | {% endif %} <a href="http://yasound.com/fr/a_propos_de_nous.php">À propos de nous</a> | <a href="http://yasound.com/fr/jobs.php">Jobs</a> | <a href="http://yasound.com/fr/presse.php">Presse</a> | <a href="http://yasound.com/fr/contact.php">Contact</a>
