--- a/yaapp/templates/account/password_reset_form.html
+++ b/yaapp/templates/account/password_reset_form.html
@@ -17,7 +17,7 @@
         <div class='span12'>
         
             <div class='well-center'>
-                <h2>{% trans "Reset" %}</h2>
+                <h2>{% trans "Lost password" %}</h2>
 {% if messages %}
 <ul class="messages">
     {% for message in messages %}
@@ -30,8 +30,11 @@
                 <a href='{% url logout%}'>{% trans "Logout" %}</a></p>
                 {% endif %}
                 <form id='passreset-form' method='post'>{% csrf_token %}
+                <fieldset>
                   {{form}}
-                <input id="submit-id-submit" class="btn btn-primary" type="submit" value="{% trans 'Reset' %}" name="submit">
+                  <br/>
+                <button type="submit" class="btn btn-primary">{% trans "Reset" %}</button>
+                </fieldset>
                 </form>
                 
             </div>
