--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -22,6 +22,11 @@
     <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/media/css/style.css"/>
 
+    <!--[if lte IE 7]>
+        <link rel="stylesheet" href="/media/css/ie.css"/>
+    <!--<![endif]-->
+
+
     {% block extra_head %}{% endblock %}
 </head>
 <body>
