better mobile reset page

--- a/yaapp/templates/account/password_reset_form_mobile.html
+++ b/yaapp/templates/account/password_reset_form_mobile.html
@@ -9,10 +9,18 @@
             <div class='page-header'>
                <h1>{% trans "Reset password" %}
                </h1>
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}                
+               
             </div>
           <form class="well" method='post'>{% csrf_token %}
           <fieldset>
-          {{form}}
+          {{ form }}
           <br/>
             <input id="submit-id-submit" class="btn btn-primary" type="submit" value="{% trans 'Reset' %}" name="submit">
           </fieldset>
