--- a/yaapp/templates/base_mobile.html
+++ b/yaapp/templates/base_mobile.html
@@ -14,7 +14,7 @@
 	<meta property="og:url" content="http://yasound.com/fr"/>
 	<meta property="og:image" content="http://yasound.com/fr/og.jpg"/>
 	<meta property="og:site_name" content="YASOUND : Ma radio, c'est moi."/>
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="fb:admins" content="USER_ID"/>
 	<meta property="og:description"
 	      content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net, et bientôt sur votre mobile."/>
