--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -20,6 +20,8 @@
 	<script type="text/javascript" src="/media/js/underscore-1.3.1.js"></script>
 	<script type="text/javascript" src="/media/js/backbone.js"></script>
 	<script type="text/javascript" src="/media/js/backbone-localstorage.js"></script>
+    <script type="text/javascript" src="/media/js/Namespace.js"></script>
+    <script type="text/javascript" src="/media/js/app/app.js"></script>
     
 {% endblock %}
 {% block head_title %}{% trans "Yasound" %}{% endblock %}
