--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% load thumbnail %}
+{% load compressed %}
+{% load straight_include %}
 
 {% block extra_head %}
     <script type="text/javascript">
@@ -13,19 +15,20 @@
         var lbl_stop = "{% trans 'Stop' %}";
     </script>
     <link rel="stylesheet" href="/media/css/flashblock.css"/>
-    <script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script>
-    <script type="text/javascript" src="/media/js/jquery.timers.js"></script>
-    <script type="text/javascript" src="/media/js/sm/soundmanager2-nodebug-jsmin.js"></script>
-	<script type="text/javascript" src="/media/js/json2.js"></script>
-	<script type="text/javascript" src="/media/js/underscore-1.3.1.js"></script>
-	<script type="text/javascript" src="/media/js/backbone.js"></script>
-	<script type="text/javascript" src="/media/js/backbone-localstorage.js"></script>
-    <script type="text/javascript" src="/media/js/Namespace.js"></script>
-    <script type="text/javascript" src="/media/js/app/app.js"></script>
+{% compressed_js 'webapp-all' %}
+
+   <script type="text/html" id="wallEventTemplate">
+      {% straight_include "yabase/app/wallEvent.mustache" %}
+   </script>
+
+
     
 {% endblock %}
 {% block head_title %}{% trans "Yasound" %}{% endblock %}
 {% block body %}
+
+<div id='wall'>
+</div>
 
 {% endblock %}
 
