--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -26,9 +26,27 @@
 {% endblock %}
 {% block head_title %}{% trans "Yasound" %}{% endblock %}
 {% block body %}
-
-<div id='wall'>
+<div class='container-fluid'>
+    <div class='row-fluid'>
+       <a href='/'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
+    </div>
+    <div class='row-fluid'>
+        <div class='span3'>
+            <div class='well'>
+            </div>
+        </div>
+        <div class='span9'>
+			<div id='wall'>
+			wall
+			</div>
+        </div>
+    </div>
+    <hr>
+    <footer>
+    <p>&copy; Yasound 2012</p>
+    </footer>
 </div>
+
 
 {% endblock %}
 
