--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -21,7 +21,13 @@
       {% straight_include "yabase/app/wallEvent.mustache" %}
    </script>
 
+   <script type="text/html" id="radioTemplate">
+      {% straight_include "yabase/app/radio.mustache" %}
+   </script>
 
+   <script type="text/html" id="trackTemplate">
+      {% straight_include "yabase/app/track.mustache" %}
+   </script>
     
 {% endblock %}
 {% block head_title %}{% trans "Yasound" %}{% endblock %}
@@ -31,11 +37,13 @@
        <a href='/'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
     </div>
     <div class='row-fluid'>
-        <div class='span3'>
-            <div class='well'>
+        <div class='span4'>
+            <div id='radio'>
             </div>
         </div>
-        <div class='span9'>
+        <div class='span8'>
+            <div id='track'>
+            </div>
 			<div id='wall'>
 			wall
 			</div>
