--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -1,9 +1,9 @@
    <div id='track-picture' class='thumbnail'>
-       <img id='track-image' src={{ picture }}" width="160px" height="160px"/>
+       <img id='track-image' src='{{ cover }}' width="160px" height="160px"/>
    </div>
    <div id='track-details'>
        <h2><span id='track-name'>{{ name }}</span></h2>
-       <p>By <strong><span id='track-artist'>{{ artist }}</span></strong> - <strong><span id='track-album'></span></strong></p>
+       <p>{{ i18n_by }} <strong><span id='track-artist'>{{ artist }}</span></strong> - <strong><span id='track-album'></span></strong></p>
        <div class="btn-toolbar">
        <div class="btn-group">
           <a class="btn" id='play'><i class="icon-play"></i></a>
@@ -14,7 +14,7 @@
        <div class="btn-group">
        <a class="btn" id='btn-buy' href="{% url buy_link radio.id %}" target='_blank'>
         <i class="icon-shopping-cart"></i>
-        {% trans "Buy on iTunes" %}
+        {{ i18n_buy }}
         </a>
         </div>
           <div class="progress no-ease" id='volume-control' onmousedown="return false">
