Player is now fully functional and embedded in current song view

--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -12,7 +12,7 @@
        </div>
 
        <div class="btn-group">
-       <a class="btn" id='btn-buy' href="{% url buy_link radio.id %}" target='_blank'>
+       <a class="btn" id='btn-buy' href="{{ buy_link }}" target='_blank'>
         <i class="icon-shopping-cart"></i>
         {{ i18n_buy }}
         </a>
