added "like" button

--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -9,6 +9,7 @@
           <a class="btn" id='play'><i class="icon-play"></i></a>
           <a class="btn" id='dec'><i class="icon-volume-down"></i></a>
           <a class="btn" id='inc' ><i class="icon-volume-up"></i></a>
+          <a class="btn" id='like' ><i class="icon-heart"></i></a>
        </div>
 
        <div class="btn-group">
